<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingTop="60dp"
    android:background="@drawable/menu">
    
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:padding="6dp">
        <ImageView
        android:id="@+id/icon1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="6dp" 
        android:src="@drawable/start"
        android:contentDescription="@null" />
    	<TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/icon1"
        android:layout_centerVertical="true"
        android:paddingLeft="10dp"
        android:text="@string/a_mode"
        android:textColor="#ff000000"
        android:textSize="20sp" 
        android:textStyle="bold"/>
    	<Button
        android:id="@+id/btn1"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:paddingRight="6dp"
        android:text="@string/start"
        android:contentDescription="@null"/>
    </RelativeLayout>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:padding="6dp">
        <ImageView
        android:id="@+id/icon2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="6dp" 
        android:src="@drawable/start"
        android:contentDescription="@null" />
    	<TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/icon2"
        android:layout_centerVertical="true"
        android:paddingLeft="10dp"
        android:text="@string/b_mode"
        android:textColor="#ff000000"
        android:textSize="20sp" 
        android:textStyle="bold"/>
    	<Button
        android:id="@+id/btn2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:paddingRight="6dp"
        android:text="@string/start"
        android:contentDescription="@null"/>
    </RelativeLayout>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:padding="6dp">
        <ImageView
        android:id="@+id/icon3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="6dp" 
        android:src="@drawable/start"
        android:contentDescription="@null" />
    	<TextView
        android:id="@+id/name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/icon3"
        android:layout_centerVertical="true"
        android:paddingLeft="10dp"
        android:text="@string/c_mode"
        android:textColor="#ff000000"
        android:textSize="20sp" 
        android:textStyle="bold"/>
    	<Button
        android:id="@+id/btn3"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:paddingRight="6dp"
        android:text="@string/start"
        android:contentDescription="@null"/>
    </RelativeLayout>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:padding="6dp">
        <ImageView
        android:id="@+id/icon4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="6dp" 
        android:src="@drawable/start"
        android:contentDescription="@null" />
    	<TextView
        android:id="@+id/name4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/icon4"
        android:layout_centerVertical="true"
        android:paddingLeft="10dp"
        android:text="@string/d_mode"
        android:textColor="#ff000000"
        android:textSize="20sp" 
        android:textStyle="bold"/>
    	<Button
        android:id="@+id/btn4"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:paddingRight="6dp"
        android:text="@string/start"
        android:contentDescription="@null"/>
    </RelativeLayout>
    
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:padding="6dp">
    <Button
        android:id="@+id/btn5"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:text="@string/stop"
        android:contentDescription="@null"/>
    </RelativeLayout>
    
</LinearLayout>